--- a/index.css
+++ b/index.css
@@ -1,66 +1,79 @@
-body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
-body {font-size:16px;}
+body,
+h1,
+h2,
+h3,
+h4,
+h5 {
+	font-family: "Poppins", sans-serif
+}
+
+body {
+	font-size: 16px;
+}
 
 ul {
-  list-style: none;
+	list-style: none;
 }
 
 ul li::before {
-  content: "\25FC";
-  color: #f04836;
-  margin-left: -1.1em;
+	content: "\25FC";
+	color: #f04836;
+	margin-left: -1.1em;
 }
 
 .fa {
-  padding: 5px;
-  font-size: 15px;
-  text-align: center;
-  text-decoration: none;
-  background: #f04836;
-  color: white;
+	padding: 5px;
+	font-size: 15px;
+	text-align: center;
+	text-decoration: none;
+	background: #f04836;
+	color: white;
 }
 
 
 .fa:hover {
-    background: white;
-    color: black;
+	background: white;
+	color: black;
 }
 
 .footer {
-    background-color: #f04836;
+	background-color: #f04836;
 }
 
 /* Create two equal columns that floats next to each other */
 .column {
-  float: left;
-  width: 50%;
-  padding: 10px;
+	float: left;
+	width: 50%;
+	padding: 10px;
 }
 
 /* Clear floats after the columns */
 .row:after {
-  content: "";
-  display: table;
-  clear: both;
+	content: "";
+	display: table;
+	clear: both;
 }
 
 .columnL {
-  float: left;
-  width: 70%;
-  padding: 10px;
+	float: left;
+	width: 70%;
+	padding: 10px;
 }
+
 .columnR {
-  float: left;
-  width: 30%;
-  padding: 10px;
+	float: left;
+	width: 30%;
+	padding: 10px;
 }
+
 .column3L {
-  float: left;
-  width: 40%;
-  padding: 10px;
+	float: left;
+	width: 40%;
+	padding: 10px;
 }
+
 .column3R {
-  float: left;
-  width: 30%;
-  padding: 10px;
+	float: left;
+	width: 30%;
+	padding: 10px;
 }
